--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
 <!ENTITY Ctr_hiderecentbm	"Lesezeichen-Pop-up: zuletzt hinzugefügte Lesezeichen verstecken">
 <!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Pop-up verstecken (wenn Seite noch kein Lesezeichen ist)">
-<!ENTITY Ctr_oldplacesbut	"Leisten-Lesezeichen: Alte Darstellung">
+<!ENTITY Ctr_oldplacesbut	"Lesezeichen-Schaltflächen: Alte Darstellung">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
 <!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen'-Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Aufklapp-Schaltfläche an die letztmögliche Position verschieben">
 <!ENTITY Ctr_urlbardropm2	"Aufklapp-Schaltfläche immer anzeigen">
 <!ENTITY Ctr_altreaderico	"Alternatives Symbol für die 'Lesemodus'-Schaltfläche">
+<!ENTITY Ctr_hideurlzoom	"Zoom-Schaltfläche verstecken (falls vorhanden)">
 <!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Pop-up-Fenster blockiert wurde)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Erweitert">
 <!ENTITY Ctr_fx34loop		"Das Deaktivieren dieser Option entfernt die 'Anruf- und Konversationsfunktionen'.">
-<!ENTITY Ctr_fx38reader		"Das Deaktivieren dieser Option deaktiviert den 'Lesemodus' und entfernt die zugehörige Schaltfläche aus der Adressleiste.">
 <!ENTITY Ctr_fx38pocket		"Das Deaktivieren dieser Option entfernt die 'Pocket'-Funktion und deren Leistenschaltfläche.">
 <!ENTITY Ctr_fx38pocket2	"Info: Das Verschieben der 'Pocket'-Schaltfläche zu den nicht verwendeten Schaltflächen im 'Anpassen-Modus' vor der Deaktivierung dieser Option entfernt zusätzlich die 'Pocket'-Einträge aus den Lesezeichen- und 'Lese'-Bereichen.">
 <!ENTITY Ctr_e_loop			"'Hello' / Anruf- und Konversationsfunktionen / Loop">
 <!ENTITY Ctr_e_readermode	"Lesemodus">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol auf Tabs">
-<!ENTITY Ctr_fx42tabsaudico	"Das Deaktivieren dieser Option entfernt das 'Audio-Abspiel-Symbol' von den Tabs.">
 <!ENTITY Ctr_e_containertab	"'Tab in Umgebung' / 'Kontainer-Tabs'">
-<!ENTITY Ctr_fx50containert	"Das Deaktivieren dieser Option entfernt die Funktion 'Tab in Umgebung' / 'Kontainer-Tabs'.">
 <!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
 <!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Das Deaktivieren dieser Option entfernt 'Flyweb'.">
-<!ENTITY Ctr_e_oneoffsearch	"Autovervollständigungs-Pop-ups Suchauswahl">
-<!ENTITY Ctr_fx51OOSeach	"Das Deaktivieren dieser Optionen entfernt die Suchauswahl des Autovervollständigungs-Pop-ups.">
+<!ENTITY Ctr_e_oneoffsearch	"Suchauswahl im Autovervollständigungs-Pop-up">
+<!ENTITY Ctr_fx51OOSeach	"Das Deaktivieren dieser Optionen entfernt die Suchauswahl im Autovervollständigungs-Pop-up.">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
