--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
 <!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
 <!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłocašk špica šypki do slědneje móžneje pozicije pśesunuś">
 <!ENTITY Ctr_urlbardropm2	"Tłocašk špica šypki pśecej pokazaś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Rozšyrjone">
 <!ENTITY Ctr_fx34loop		"Gaž znjemóžnijośo toś to nastajenje, se zawołańske a konwersaciske funkcije wótpóraju.">
-<!ENTITY Ctr_fx38reader		"Gaž toś te nastajenja se wótwoliju, znjemóžnijo se 'cytański modus' a jogo symbol wótpórajo se z adresowego póla.">
 <!ENTITY Ctr_fx38pocket		"Gaž toś to nastajenje se wótwolijo, funkcija 'Pocket' se znjemóžnijo a jeje tłocašk wótpórajo se ze symbolowych rědkow.">
 <!ENTITY Ctr_fx38pocket2	"Glědajśo: Pśez pśesuwanje tłocaška 'Pocket' do 'pśiměrjeńskego wokna' pśed znjemóžnjanim toś togo nastajenja wótpórajo teke zapiski 'Pocket' w menijoma cytańskich znamjenjow a cytańskego modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Telefoněrowanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Cytański modus">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
-<!ENTITY Ctr_fx42tabsaudico	"Gaž znjemóžnijośo toś to nastajenje, wótpórajo se 'symbol za awdiowótgrawanje' z rejtarkow.">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
-<!ENTITY Ctr_fx50containert	"Gaž se toś to nastajenje znjemóžnijo, se 'kontejnerowe rejtarki' wótpóraju.">
 <!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
 <!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Gaž se toś to nastajenje znjemóžnijo, se 'flyweb' znjemóžnijo.">
 <!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
