--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Liiguta rippmenüü avamise nupp võimalikult lõppu">
 <!ENTITY Ctr_urlbardropm2	"Tee rippmenüü avamise nupp alati nähtavaks">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Täpsemad">
 <!ENTITY Ctr_fx34loop		"Sellelt eelistuselt märke eemaldamine eemaldab 'helistamise ja vestluse' funktsioonid.">
-<!ENTITY Ctr_fx38reader		"Sellelt eelistuselt märke eemaldamine keelab 'lugemisvaate' funktsiooni ja eemaldab aadressiribalt selle ikooni.">
 <!ENTITY Ctr_fx38pocket		"Sellelt eelistuselt märke eemaldamine keelab 'Pocket' funktsiooni ja eemaldab selle nupu tööriistaribadelt.">
 <!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kõik funktsiooniga 'Pocket' seotud kirjed.">
 <!ENTITY Ctr_e_loop			"Hello / Helistamine ja vestlus / Loop">
 <!ENTITY Ctr_e_readermode	"Lugemisvaade">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
-<!ENTITY Ctr_fx42tabsaudico	"Sellelt eelistuselt märke eemaldamine eemaldab kaartidelt 'heli esitamise ikooni'.">
 <!ENTITY Ctr_e_containertab	"Konteinerkaardid">
-<!ENTITY Ctr_fx50containert	"Sellelt eelistuselt märke eemaldamine keelab konteinerkaartide funktsiooni 'container tabs'.">
 <!ENTITY Ctr_e_findbarhl	"Otsinguribal esiletõstmine">
 <!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab otsinguribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Sellelt eelistuselt märke eemaldamine keelab funktsiooni 'Flyweb'.">
 <!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Sätted">
