--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Bouton de menu des marque-pages">
 <!ENTITY Ctr_hiderecentbm	"Menu déroulant des marque-pages : masquer les marque-pages récemment ajoutés">
 <!ENTITY Ctr_hideeditbm		"Étoile des marque-pages : masquer le menu déroulant (si la page n'a pas été marquée)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Menu déroulant : apparence de menu de type « panneau »">
 <!ENTITY Ctr_bmbunsortbm	"Menu déroulant : menu « Autres marque-pages »">
 <!ENTITY Ctr_bmbunsortbm2	"Menu au-dessus des marque-pages">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Déplacer la liste déroulante à la dernière position possible">
 <!ENTITY Ctr_urlbardropm2	"Rendre le bouton de liste déroulante toujours visible">
 <!ENTITY Ctr_altreaderico	"Utiliser des icônes alternatives pour le « mode lecture »">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification lorsqu'une fenêtre surgissante est bloquée">
 <!ENTITY Ctr_locsearchbw10	"Réduire la hauteur des barres d'adresse et de recherche (expérimental)">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité des sites (boite d'identité)">
@@ -362,20 +363,16 @@
 
 <!ENTITY Ctr_experttweaks	"Avancé">
 <!ENTITY Ctr_fx34loop		"Décocher ce paramètre désactive les fonctionnalités d'appels et de conversations.">
-<!ENTITY Ctr_fx38reader		"Décocher ce paramètre désactive le mode « Lecture » et enlève son icône de la barre d'adresse.">
 <!ENTITY Ctr_fx38pocket		"Décocher ce paramètre désactive la fonction « Pocket » et enlève le bouton « Pocket » des barres d'outils.">
 <!ENTITY Ctr_fx38pocket2	"Note : déplacer le bouton « Pocket » vers la zone « Outils et fonctionnalités supplémentaires » de la « page de personnalisation » avant de désactiver ce paramètre supprime également toutes les entrées relatives à « Pocket » du menu des marque-pages et des fenêtres surgissantes du menu du mode lecture.">
 <!ENTITY Ctr_e_loop			"Hello / Appels et conversations">
 <!ENTITY Ctr_e_readermode	"Mode lecture">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio sur les onglets">
-<!ENTITY Ctr_fx42tabsaudico	"Décocher ce paramètre retire l'icône de lecture audio des onglets et désactive le menu contextuel afférent.">
 <!ENTITY Ctr_e_containertab	"Onglets conteneurs">
-<!ENTITY Ctr_fx50containert	"Décocher ce paramètre désactive les onglets conteneurs.">
 <!ENTITY Ctr_e_findbarhl	"Surlignage avancé de la barre de recherche">
 <!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les fonctionnalités avancées de surlignage de la barre de recherche.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_fx50flyweb		"Décocher ce paramètre désactive « FlyWeb ».">
 <!ENTITY Ctr_e_oneoffsearch	"Sélection de recherche des fenêtres surgissantes d'autocomplétion">
 <!ENTITY Ctr_fx51OOSeach	"Décocher ce paramètre retire la sélection de recherche des fenêtres surgissantes de la barre de navigation.">
 
