--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
 <!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni 'Njesortěrowane zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Rozšěrjene">
 <!ENTITY Ctr_fx34loop		"Znjemóžnjenje tutoho nastajenja zawołanske a konwersaciske funkcije wotstroni.">
-<!ENTITY Ctr_fx38reader		"Hdyž so  tute nastajenja wotwola, so 'čitanski modus' znjemóžni a jeho symbol wotstroni so z adresoweho pola.">
 <!ENTITY Ctr_fx38pocket		"Hdyž so  tute nastajenje wotwoli, so funkcija 'Pocket' znjemóžni a jeje tłóčatko wotstroni so ze symbolowych lajstow.">
 <!ENTITY Ctr_fx38pocket2	"Kedźbu: Přez přesuwanje tłóčatka 'Pocket' do 'přiměrjenskeho wokna' před znjemóžnjenjom tutoho nastajenja wotstroni tež zapiski 'Pocket' w menijomaj zapołožkow a čitanskeho modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Zawołanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Čitanski modus">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje na rajtarkach">
-<!ENTITY Ctr_fx42tabsaudico	"Hdyž tute nastajenje znjemóžnjeće, so 'symbol za awdiowothrawanje' z rajtarkow wotstroni.">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
-<!ENTITY Ctr_fx50containert	"Hdyž so tute nastajenje znjemóžni, so 'kontejnerowe rajtarki' wotstronja.">
 <!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
 <!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Hdyž so tute nastajenje znjemóžni, so 'flyweb' znjemóžni.">
 <!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
