--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Botão do menu de favoritos">
 <!ENTITY Ctr_hiderecentbm	"Popup de favoritos: ocultar favoritos adicionados recentemente">
 <!ENTITY Ctr_hideeditbm		"Estrela de favoritos: ocultar popup (se a página não está nos favoritos)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Popup: aparência do menu do painel">
 <!ENTITY Ctr_bmbunsortbm	"Popup: menu 'outros favoritos'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu acima dos favoritos">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Mover marcador para a última posição possível">
 <!ENTITY Ctr_urlbardropm2	"Tornar marcador sempre visível">
 <!ENTITY Ctr_altreaderico	"Ícones alternativos do 'Leitor'">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de notificação quando um pop-up ficar bloqueado">
 <!ENTITY Ctr_locsearchbw10	"Reduzir altura das barras de localização e barras de pesquisa (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botão de identidade do site (caixa de identidade)">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Avançado">
 <!ENTITY Ctr_fx34loop		"Desmarque esta opção para removê-los.">
-<!ENTITY Ctr_fx38reader		"Desmarcar esta preferência desativa o 'Modo leitura' e remove seu ícone da barra de localização.">
 <!ENTITY Ctr_fx38pocket		"Desmarcar esta preferência desativa o recurso 'Pocket' e remove o botão 'Pocket'  das barras de ferramentas.">
 <!ENTITY Ctr_fx38pocket2	"Nota: mover o botão 'Pocket' para 'paleta de personalização' antes de desativar esta preferência também remove as entradas 'Pocket' nos menus de favoritos e leitura.">
 <!ENTITY Ctr_e_loop			"Hello / Chamada e conversação / Loop">
 <!ENTITY Ctr_e_readermode	"Modo de leitura">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ícone de reprodução de áudio em abas">
-<!ENTITY Ctr_fx42tabsaudico	"Desmarcar esta preferência remove o 'ícone de reprodução de áudio' das abas.">
 <!ENTITY Ctr_e_containertab	"Abas container">
-<!ENTITY Ctr_fx50containert	"Desmarcar esta preferência remove 'abas container'.">
 <!ENTITY Ctr_e_findbarhl	"Realce da barra de localização">
 <!ENTITY Ctr_fx50findbarhl	"Desmarcar estas preferências remove os recursos de 'realce' das barra de localização.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Desmarcar esta preferência desativa 'Flyweb'.">
 <!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Configurações">
