--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
 <!ENTITY Ctr_hiderecentbm	"Спливаюче вікно закладок: приховати недавно додані закладки">
 <!ENTITY Ctr_hideeditbm		"Зірка закладок: приховати спливаюче вікно (якщо сторінка не закладена)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Спливаюче вікно: вигляд меню панелі">
 <!ENTITY Ctr_bmbunsortbm	"Спливаюче вікно: субменю «несортованих закладок»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Рухати позначку випадного списку в останню можливу позицію">
 <!ENTITY Ctr_urlbardropm2	"Зробити позначку випадного списку завжди видимою">
 <!ENTITY Ctr_altreaderico	"Альтернативні іконки «Читача»">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Приховати інфо кнопку «спливаюче вікно блоковано»">
 <!ENTITY Ctr_locsearchbw10	"Зменшити висоту панелей рядку адреси та пошуку (експериментальне)">
 <!ENTITY Ctr_urlbar_ib		"Індикатори справжності панелі рядку адреси">
@@ -362,22 +363,18 @@
 
 <!ENTITY Ctr_experttweaks	"Розширені опції">
 <!ENTITY Ctr_fx34loop		"Вимкнення цього параметру видалить їх.">
-<!ENTITY Ctr_fx38reader		"Вимкнення цього параметру вимикає цей режим та прибирає його іконку з панелі навігації.">
 <!ENTITY Ctr_fx38pocket		"Вимкнення цього параметру вимикає цей режим та усуває його кнопку з панелей.">
 <!ENTITY Ctr_fx38pocket2	"Примітка: Переміщення кнопки «Кишеня» на сторінку «Пристосувати &brandShortName;» перед вимкненням цього налаштування також усуває написи «Кишеня» в закладках і меню читання.">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
 <!ENTITY Ctr_e_readermode	"Режим читання">
 <!ENTITY Ctr_e_pocket		"Кишеня">
 <!ENTITY Ctr_e_tabsaudioico	"Іконка аудіовідтворення на вкладках">
-<!ENTITY Ctr_fx42tabsaudico	"Вимкнення цього параметру усуває «іконку аудіовідтворення» з вкладок.">
 <!ENTITY Ctr_e_containertab	"Контейнерні вкладки">
-<!ENTITY Ctr_fx50containert	"Вимкнення цього параметру усуває «Контейнерні вкладки».">
 <!ENTITY Ctr_e_findbarhl	"Підсвічування в пошуковій панелі">
 <!ENTITY Ctr_fx50findbarhl	"Вимкнення цього параметру усуває «підсвічувальні» особливості пошукової панелі.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Вимкнення цього налаштування вимикає «Flyweb».">
 <!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
