--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
 <!ENTITY Ctr_hiderecentbm	"Pojavno okno zaznamkov: skrij nedavno dodane zaznamke">
 <!ENTITY Ctr_hideeditbm		"Zvezdica za zaznamke: skrij pojavno okno (če stran ni dodana med zaznamke)">
-<!ENTITY Ctr_oldplacesbut	"Bookmarks on toolbar: old appearance">
+<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'Nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
@@ -250,6 +250,7 @@
 <!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na zadnji možni položaj">
 <!ENTITY Ctr_urlbardropm2	"Naj bo spustna puščica vedno vidna">
 <!ENTITY Ctr_altreaderico	"Nadomestne ikone 'Bralnika'">
+<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
 <!ENTITY Ctr_locsearchbw10	"Zmanjšaj višino naslovne in iskalne vrstice (preskusno)">
 <!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje identitete)">
@@ -362,20 +363,16 @@
 
 <!ENTITY Ctr_experttweaks	"Napredno">
 <!ENTITY Ctr_fx34loop		"Odznačitev te nastavitve jih odstrani.">
-<!ENTITY Ctr_fx38reader		"Odznačitev teh nastavitev ga onemogoči in odstrani njegovo ikono iz naslovne vrstice.">
 <!ENTITY Ctr_fx38pocket		"Odznačitev te nastavitve jo onemogoči in iz orodnih vrstic odstrani njen gumb.">
 <!ENTITY Ctr_fx38pocket2	"Opomba: premikanje gumba 'Pocket' v 'paleto za prilagoditev' pred onemogočanjem te nastavitve odstani tudi vnose 'Pocket' iz menijev zaznamkov in bralnika.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Klicanje in pogovori">
 <!ENTITY Ctr_e_readermode	"Način za branje">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona predvajanja zvoka na zavihkih">
-<!ENTITY Ctr_fx42tabsaudico	"Odznačitev te nastavitve iz zavihkov odstrani 'ikono predvajanja zvoka'.">
 <!ENTITY Ctr_e_containertab	"Zavihki vsebnika">
-<!ENTITY Ctr_fx50containert	"Odznačitev te nastavitve odstrani 'zavihke vsebnika'.">
 <!ENTITY Ctr_e_findbarhl	"Poudarjanje iskalne vrstice">
 <!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Odznačitev te nastavitve onemogoči 'Flyweb'.">
 <!ENTITY Ctr_e_oneoffsearch	"Izbira iskanja pojavnega seznama samodokončevanja">
 <!ENTITY Ctr_fx51OOSeach	"Odznačitev te nastavitve odstrani izbiro iskanja pojavnega seznama naslovne vrstice.">
 
